# veris

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  Makefile  README.md  ROADMAP.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/tests/: test_api.py  test_data_layer.py  test_guardrails.py  test_insights.py  test_llm_providers.py  test_llm_router.py  test_pipeline.py
backend/veris/: __init__.py  buildmap.py  config.py  ingest.py  main.py
backend/veris/api/: deps.py  schemas.py  security.py  seeding.py  state.py
backend/veris/api/v1/: __init__.py  ask.py  evals.py  map.py  papers.py  (+1 more)
backend/veris/core/: logging.py
backend/veris/domain/: answer.py  insights.py  models.py
backend/veris/embeddings/: base.py  factory.py  fastembed_embedder.py  hashing.py
backend/veris/evals/: benchmark.json  harness.py  metrics.py
backend/veris/grounding/: verifier.py
backend/veris/guardrails/: __init__.py  input_guard.py  output_guard.py
backend/veris/ingestion/: arxiv_client.py  chunker.py  service.py
backend/veris/insights/: clustering.py  graph.py  map_builder.py  position.py  projection.py
backend/veris/llm/: anthropic_provider.py  base.py  errors.py  factory.py  openai_compat_provider.py  pricing.py  router.py  stub_provider.py  tracing.py  types.py
backend/veris/pipeline/: __init__.py  graph.py
backend/veris/retrieval/: fusion.py  rerank.py  retriever.py
backend/veris/storage/: base.py  factory.py  postgres_store.py  sqlite_store.py
backend/veris/synthesis/: ask.py  planner.py  prompts.py  synthesizer.py
(+41 files in other folders)
